--- a/index.html
+++ b/index.html
@@ -9,26 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two:700|Source+Sans+Pro:400,700" rel="stylesheet">
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
     <!-- endinject -->
 </head>
 
 <body>
-    <div id="main-wrapper" ng-app="FoodTruck" ng-cloak>
-        <div ng-view id="view-wrapper"></div>
+    <div id="main-wrapper" class="full-height" ng-app="FoodTruck" ng-cloak>
+        <div ng-view id="view-wrapper" class="full-height"></div>
     </div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGKd6_T2CjUfzBhrjKVMQlVdFescQZGK8"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGKd6_T2CjUfzBhrjKVMQlVdFescQZGK8&libraries=places"></script>
     <!-- inject:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.min.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.min.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-    <script src="bower_components/angular-material/angular-material.min.js"></script>
-    <script src="src/scripts/app.js"></script>
-    <script src="src/scripts/controllers/home.js"></script>
     <!-- endinject -->
 </body>
 
